# ChangeLog for media-libs/portaudio
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.67 2008/12/20 14:37:47 nixnut Exp $

  20 Dec 2008; nixnut <nixnut@gentoo.org> portaudio-19_pre20071207.ebuild:
  Stable on ppc wrt bug 236230

  13 Dec 2008; Raúl Porcel <armin76@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  arm/ia64/sh stable wrt #236230

  12 Dec 2008; Brent Baude <ranger@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Marking portaudio-19_pre20071207 ppc64 for bug 236230

  11 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Stable on alpha, bug #236230

  10 Dec 2008; Ferris McCormick <fmccor@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Sparc stable, part of Bug #236230.

  04 Dec 2008; Markus Meier <maekke@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  amd64/x86 stable, bug #236230

  02 Dec 2008; Jeroen Roovers <jer@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Stable for HPPA (bug #236230).

  14 Sep 2008; Friedrich Oslage <bluebird@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Back to ~sparc, bug #236230 comment #3

  14 Sep 2008; Friedrich Oslage <bluebird@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Stable on sparc, bug #236230

  24 Jun 2008; Samuli Suominen <drac@gentoo.org> -portaudio-18.1-r5.ebuild,
  portaudio-18.1-r6.ebuild, portaudio-19_pre20071207.ebuild:
  amd64 stable for 18.1-r6, thanks to CCIEChad from #-amd64-dev for testing.
  slotmove back to 0 since it turns out v19 ain't sanely slottable.

  23 Jun 2008; nixnut <nixnut@gentoo.org> portaudio-19_pre20071207.ebuild:
  Added ~ppc wrt bug 223059

  27 May 2008; Jeroen Roovers <jer@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Marked ~hppa (bug #223059).

  26 May 2008; Samuli Suominen <drac@gentoo.org>
  portaudio-19_pre20071207.ebuild:
  Restored ~arm

  22 May 2008; Raúl Porcel <armin76@gentoo.org>
  portaudio-19_pre20071207.ebuild: