@@ -1,10 +1,6 @@
-AUX portaudio-18.1-Makefile.linux 1585 RMD160 15e6980fe7e749aa4faaf42c9110813bb3103842 SHA1 bed0ce41b3b8dbf798f8295f948c7a1b3d524951 SHA256 c17322d3600484695213deb5d11108413f2e453f5265f87875ad6a2f1b70f291
-AUX portaudio-18.1-Makefile.macos 1584 RMD160 2ffbe7333a42c5518fdbbc5aaf3efc9b08b6de7b SHA1 203e764a46913a7d4b383d24be9b5bffae5176e5 SHA256 981c94e1dcf32b078b346eed1ed97b16b970aac8f08626dbeffb735a52f26f82
-AUX portaudio-18.1-r5-Makefile.linux 1591 RMD160 2662f59aee90e7bebb48b13da482a8579118aef2 SHA1 a815302d2372c6198a9a09812a2f6204ba3c6b97 SHA256 3d342b7c93b5e30fa12d960d8e465ac0635668d802f1afd1f175506929529097
-AUX portaudio-18.1-r6-Makefile 1643 RMD160 1381535bd96c596712439bacb00b15fbf24ef954 SHA1 f2b563115fbabd25d9168b16c18b05732b65d892 SHA256 112bca3712ab89435dea41eb4867aec8252ad4704433522bf14816ab01b0872f
 DIST pa_stable_v19_20071207.tar.gz 1113282 RMD160 5185bd85bd4bc75dddb3fa56f172a346bdeea0c7 SHA1 3841453bb7be672a15b6b632ade6f225eb0a4efc SHA256 06a17727d56d382a69036de2ed9aee9a15cac0329b995b8cfcd69b357f47bf2b
-DIST portaudio_v18_1.zip 550130 RMD160 3352d70225a81aae80eefabc3701658da0c750c2 SHA1 a460ac5484137d77df17a95ce844ff7f178305b1 SHA256 9da7f1ba0b8029f934d5a8300199e29095127e6abfa03dbb3c1ce40e10751f0a
-EBUILD portaudio-18.1-r6.ebuild 1252 RMD160 b6561a98fbf9b1316a1a7cafe2ac74ba9dcdb600 SHA1 3d6b6606f21e69654f51b7afcbea8fc2b9cc9d87 SHA256 feefc61f5e3569b086b0661f126ae4764c6796dfcbba9b6fe9adcaebb5e5b8dd
+DIST pa_stable_v19_20090514.tar.gz 1130501 RMD160 062ba89de90108338ddf815f0c993cc612261697 SHA1 5bcdf4c6c519373e93692447b6b3fa62f9250dc2 SHA256 44ec6ba7f7430ac7f496f7064cc0907daa29c50c793bd1b31dfeaa5af38a6b70
 EBUILD portaudio-19_pre20071207.ebuild 951 RMD160 4e0ce8d835461c19984217d67e57eb1ce3979f44 SHA1 49f716b6203f143b02008d74636868bcf77f0974 SHA256 80d9eff530c56814f6396cf11a20a799a66b98a6840b69dfeb94e75db391f7d6
-MISC ChangeLog 8590 RMD160 a2a09d508f1ba839d4e797497cc9fa8b1715e30f SHA1 5f04bac7de3c1a98244b2c0adec20281cdb4a136 SHA256 0f064da3121661b7ea26f75fabe13b75b72a90528273bc67581b58555e480cf5
+EBUILD portaudio-19_pre20090514.ebuild 1011 RMD160 429235f10d60d3e677e5d6e549c85fac8319df8d SHA1 03f7682122cd9403d21ae2c35bd14842fb20bf18 SHA256 ecd013f0fa72dd0d494fca41a9a6de829bd0c626d693dda0c6106d9c76d0e976
+MISC ChangeLog 8744 RMD160 aa1829350e6aa6113bff3af53aaf6df073c835e9 SHA1 abec6acb70dcbfd040cb293cf862669e0d0d70e1 SHA256 623ae5977206bdc5aaf09e7b311fac1a5f980cd0867ac595727013707ee990a1
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
