@@ -1,59 +1,0 @@
-# Make PortAudio for Linux
-# Updated 2001/08/25 Bill Eldridge bill@rfa.org
-# Updated 2001/10/16, philburk@softsynth.com, s/unix_oss/unix_oss/
-# Updated 2002/04/30 Bill Eldridge bill@rfa.org
-#     Made the libinstall and tests compile a bit cleaner
-# Updated 2005/07/22 Jeremy Huddleston eradicator@gentoo.org
-
-# A pretty bare makefile, that figures out all the test files
-# and compiles them against the library in the pa_unix_oss directory.
-
-# Do "make all" and then when happy, "make libinstall"
-# (if not happy, "make clean")
-
-# The ldconfig stuff in libinstall is the wrong way to do it - 
-# someone tell me the right way, please
-
-LIBS =  -lm -lpthread
-
-CFLAGS = -O2
-
-LIBFILES:= ./pa_common/pa_lib.c ./pa_unix_oss/pa_unix_oss.c ./pa_unix_oss/pa_unix.c
-
-VERSION=18
-
-CC=gcc
-AR=ar
-RANLIB=ranlib
-LN=ln
-CP=cp
-MKDIR=mkdir
-
-prefix=/usr
-libdir=/usr/lib
-includedir=/usr/include
-
-all: libportaudio.so libportaudio.a
-
-%.lo : %.c
-	$(CC) -fPIC $(CFLAGS) -c -I./pa_common $? -o $@
-
-.c.o:
-	$(CC) $(CFLAGS) -c -I./pa_common $? -o $@
-
-libportaudio.so.$(VERSION): $(LIBFILES:.c=.lo)
-	$(CC) -shared $(LIBS) -Wl,-soname,$@ -o $@ $?
-
-libportaudio.so: libportaudio.so.$(VERSION)
-	$(LN) -s $? $@
-
-libportaudio.a: $(LIBFILES:.c=.o)
-	$(AR) ruv $@ $?
-	$(RANLIB) $@
-
-install: libportaudio.so libportaudio.a
-	$(MKDIR) -p $(DESTDIR)$(includedir)/portaudio
-	$(MKDIR) -p $(DESTDIR)$(libdir)
-	$(CP) -dpf libportaudio.so.$(VERSION) libportaudio.so libportaudio.a $(DESTDIR)$(libdir)
-	$(CP) -dpf pa_common/portaudio.h $(DESTDIR)$(includedir)/portaudio
-	$(LN) -s portaudio/portaudio.h $(DESTDIR)$(includedir)//portaudio.h
